--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
     <div class="container">
       <div class="row">
         <div class="column1">
-          <h1>
+          <h1 class="text-dark-magenta">
             10,000+ of our users love our products.
           </h1>
-          We only provide great products combined with excellent customer service.
-          See what our satisfied customers are saying about our services.
+          <p>
+            We only provide great products combined with excellent customer service.
+            See what our satisfied customers are saying about our services.
+          </p>
         </div>
 
         <div class="column2">
@@ -44,7 +46,7 @@
               <li><img src="images/icon-star.svg" alt=""></li>
               <li><img src="images/icon-star.svg" alt=""></li>
               <li><img src="images/icon-star.svg" alt=""></li>
-              <li class="ml-2">Rated 5 Stars in Reviews</li>
+              <li class="ml-2 text-dark-magenta">Rated 5 Stars in Reviews</li>
             </ul>
           </div>
           <div class="ratings mr-2">
@@ -54,7 +56,7 @@
               <li><img src="images/icon-star.svg" alt=""></li>
               <li><img src="images/icon-star.svg" alt=""></li>
               <li><img src="images/icon-star.svg" alt=""></li>
-              <li class="ml-2">Rated 5 Stars in Report Guru</li>
+              <li class="ml-2 text-dark-magenta">Rated 5 Stars in Report Guru</li>
             </ul>
           </div>
           <div class="ratings mr-1">
@@ -64,14 +66,14 @@
               <li><img src="images/icon-star.svg" alt=""></li>
               <li><img src="images/icon-star.svg" alt=""></li>
               <li><img src="images/icon-star.svg" alt=""></li>
-              <li class="ml-2">Rated 5 Stars in BestTech</li>
+              <li class="ml-2 text-dark-magenta">Rated 5 Stars in BestTech</li>
             </ul>
           </div>
         </div>
         </div>
       <div class="row">
         <div class="box mt-0">
-          <p>
+          <p class="text-white">
             Colton Smith 
             Verified Buyer
             "We needed the same printed design as the one we had ordered a week prior.
@@ -80,7 +82,7 @@
           </p>
         </div>
         <div class="box mt-1">
-          <p>
+          <p class="text-white">
             Irene Roberts 
             Verified Buyer
             "Customer service is always excellent and very quick turn around. Completely
@@ -88,7 +90,7 @@
           </p> 
         </div>
         <div class="box mt-2">
-          <p>
+          <p class="text-white">
             Anne Wallace 
             Verified Buyer
             "Put an order with this company and can only praise them for the very high
@@ -96,12 +98,12 @@
           </p>
         </div>
       </div>
-      <div class="attribution">
+      <!-- <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
         >. Coded by <a href="#">CYIMANA Faisal</a>.
-      </div>
+      </div> -->
     </div>
   </body>
 </html>
