desktop view finished

--- a/index.html
+++ b/index.html
@@ -73,26 +73,41 @@
         </div>
       <div class="row">
         <div class="box mt-0">
+          <div>
+            <img src="images/image-colton.jpg" alt="" ALIGN="left">
+            <p>
+              <strong class="text-white">Colton Smith</strong> <br>
+              <span class="text-pink">Verified Buyer</span>
+            </p>
+          </div>
           <p class="text-white">
-            Colton Smith 
-            Verified Buyer
             "We needed the same printed design as the one we had ordered a week prior.
             Not only did they find the original order, but we also received it in time.
             Excellent!"
           </p>
         </div>
         <div class="box mt-1">
+          <div>
+            <img src="images/image-irene.jpg" alt="" ALIGN="left">
+            <p>
+              <strong class="text-white">Irene Roberts</strong> <br>
+              <span class="text-pink">Verified Buyer</span>
+            </p>
+          </div>
           <p class="text-white">
-            Irene Roberts 
-            Verified Buyer
             "Customer service is always excellent and very quick turn around. Completely
             delighted with the simplicity of the purchase and the speed of delivery."
           </p> 
         </div>
         <div class="box mt-2">
+          <div>
+            <img src="images/image-anne.jpg" alt="" ALIGN="left">
+            <p>
+              <strong class="text-white">Anne Wallace</strong> <br>
+              <span class="text-pink">Verified Buyer</span>
+            </p>
+          </div>
           <p class="text-white">
-            Anne Wallace 
-            Verified Buyer
             "Put an order with this company and can only praise them for the very high
             standard. Will definitely use them again and recommend them to everyone!"
           </p>
